# msh2cande

./: README.md  pyproject.toml  setup.py
msh2cande/: __init__.py  cande.py  common.py  format.py  main.py  msh_load.py  seqview.py  structure_build.py
tests/: conftest.py  msh_load_fixtures.py  test_cande.py  test_cande_format.py  test_common.py  test_msh_load.py  test_seqview.py  test_structure_build.py
